fix images and videos being too big

--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -54,12 +54,17 @@
   margin: 0;
 }
 
-.post img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+.post img,
+.post video {
+  max-height: 100vh;
+  width: auto;
+  max-width: 100%;
+  object-fit: contain;
   border-radius: 8px;
   margin-top: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .post .likes {
